ffmpeg: Avoid duplicating Closed Captions when increasing frame rate.

Fixes ticket #7506.